# pkonfig

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  benchmark_attrs_vs_pydantic.json  benchmark_descriptors_vs_attrs.json  meta.yaml  optimization_summary.md  optimized_attrs_config.py  pyproject.toml  python_version_test.sh  setup.cfg  test_attrs.py  test_attrs_direct.py  test_attrs_optimized.py  test_optimization.py  test_optimized_config.py  test_pydantic.py
.github/workflows/: code-quality.yml  docs.yml  python-publish.yml
benchmark/: pydantic_.py
benchmarks/: ATTRS_VS_PYDANTIC.md  DESCRIPTORS_VS_ATTRS.md  README.md  RESULTS.md  __init__.py  benchmark_attrs_vs_pydantic.py  benchmark_descriptors_vs_attrs.py  benchmark_pkonfig_vs_pydantic.py  benchmark_results.json  generate_markdown.py  utils.py
benchmarks/scenarios/: __init__.py  access_performance.py  dict_source.py  large_config.py  nested_config.py  simple_config.py
docs/: Makefile  agents.md  api.md  benchmarks.md  concepts.md  conf.py  examples.md  faq.md  index.md  installation.md  quickstart.md  recipes.md  tutorials.md
pkonfig/: __init__.py  attrs.py  attrs_config.py  base.py  base_config.py  config.py  descriptor_helper.py  errors.py  fields.py  pydantic_settings.py  storage.py
pkonfig/storage/: __init__.py  base.py  dot_env.py  env.py  file.py  ini.py  json.py  secret_file.py  toml.py  yaml_.py
tests/: test_config.py  test_fields.py
tests/compatibility/: test_python_version_compatibility.py
tests/test_config/: test_base.py  test_config.py  test_fields.py  test_storage.py
tests/test_storage/: test.toml  test.yaml  test_base.py  test_base_storage.py  test_chained.py  test_dot_env.py  test_env.py  test_ini.py  test_json.py  test_optional.py  test_toml.py  test_yaml.py
tests/unit/: test_attrs_config.py  test_conda_recipe.py  test_config.py  test_descriptor_typing.py  test_fields.py  test_mypy_integration.py  test_pydantic_settings.py  test_tutorials.py
tests/unit/test_storage/: test.ini  test.toml  test_chained.py  test_dot_env.py  test_env.py  test_ini.py  test_secret_file.py  test_toml.py  test_yaml.py
