[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "pkonfig"
requires-python = ">=3.6"
description = "Pythonic agile application configuration helpers"
authors = [
    {name="Nikita Gladkikh", email="gladkikh.nikita@gmail.com"}
]
maintainers = [
    {name="Nikita Gladkikh", email="gladkikh.nikita@gmail.com"}
]
keywords = [
    "config",
    "configuration",
    "configurations",
    "settings",
    "env",
    "environment",
    "environments",
    "dotenv",
    "application",
    "python-config",
    "yaml",
    "toml",
    "ini"
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    'toml',
    "typing_extensions;python_version<'3.7'"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
yaml = ["pyyaml"]
[tool.setuptools_scm]
[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["pkonfig"]
include = ["pkonfig*"]

[project.urls]
homepage = "https://github.com/ngladkikh/pkonfig"
documentation = "https://github.com/ngladkikh/pkonfig"
repository = "https://github.com/ngladkikh/pkonfig"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true