[metadata]
name = pkonfig
version = 1.0
description = Pythonic agile application configuration helpers
url = https://github.com/ngladkikh/pkonfig
author = Nikita Gladkikh
author_email = gladkikh.nikita@gmail.com
maintainer = Nikita Gladkikh
maintainer_email = gladkikh.nikita@gmail.com
long_description = file: README.md
long_description_content_type='text/markdown',
keywords = one, two
license = MIT
license_files = LICENSE
classifiers =
    'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'License :: MIT License',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Libraries :: Python Modules',

[options]
python_requires = >=3.6
packages = find:
install_requires =
    typing_extensions;python_version<'3.7'

[options.packages.find]
where = .
include = pkonfig*

[options.extras_require]
yaml = pyyaml
toml = tomli
