[metadata]
name = pkonfig
version = attr: setuptools_scm.get_version
description = Pythonic agile application configuration helpers
url = https://github.com/ngladkikh/pkonfig
author = Nikita Gladkikh
author_email = gladkikh.nikita@gmail.com
maintainer = Nikita Gladkikh
maintainer_email = gladkikh.nikita@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = config
    configuration
    configurations
    settings
    env
    environment
    environments
    dotenv
    application
    python-config
    yaml
    toml
    ini
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    typing_extensions;python_version<'3.7'

[options.packages.find]
where = .
include = pkonfig*

[options.extras_require]
yaml = pyyaml
toml = tomli

[tool:isort]
profile = black

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true